--- a/app/src/main/res/layout/single_game_round_item.xml
+++ b/app/src/main/res/layout/single_game_round_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
@@ -8,33 +9,27 @@
 
         <TextView
             android:id="@+id/roundCount"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/round_count"
             android:gravity="center"
-            android:paddingStart="8dp"
-            android:paddingTop="8dp"
-            android:paddingEnd="8dp"
-            android:paddingBottom="8dp"
             android:textColor="@color/white"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/player1Penalty"
+            app:layout_constraintBottom_toBottomOf="@+id/player1Score"
             app:layout_constraintEnd_toStartOf="@id/player1Score"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
+            style="@style/ScoreTexEditTextStyle"
             android:id="@+id/player1Score"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:background="@null"
-            android:hint="@string/input_score_hint"
-            android:gravity="center"
             app:layout_constraintStart_toEndOf="@+id/roundCount"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/player2Score"
-            android:inputType="numberSigned"
-            android:autofillHints="" />
+            android:autofillHints=""
+            tools:ignore="LabelFor" />
 
         <com.google.android.material.divider.MaterialDivider
             android:id="@+id/verticalDivider1"
@@ -48,30 +43,21 @@
             app:layout_constraintEnd_toStartOf="@id/player2Score"/>
 
         <TextView
+            style="@style/PenaltyTextViewStyle"
             android:id="@+id/player1Penalty"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="@color/penalty_text_color"
-            android:textSize="12sp"
-            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/horizontalDivider"
             app:layout_constraintEnd_toStartOf="@+id/player2Penalty"
             app:layout_constraintStart_toEndOf="@+id/roundCount"
             app:layout_constraintTop_toBottomOf="@+id/player1Score" />
 
         <EditText
+            style="@style/ScoreTexEditTextStyle"
             android:id="@+id/player2Score"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:hint="@string/input_score_hint"
-            android:background="@null"
-            android:gravity="center"
             app:layout_constraintStart_toEndOf="@+id/player1Score"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/player3Score"
-            android:inputType="numberSigned"
-            android:autofillHints="" />
+            android:autofillHints=""
+            tools:ignore="LabelFor" />
 
         <com.google.android.material.divider.MaterialDivider
             android:id="@+id/verticalDivider2"
@@ -84,30 +70,21 @@
             app:layout_constraintStart_toEndOf="@+id/player2Score"
             app:layout_constraintEnd_toStartOf="@id/player3Score"/>
 
-
         <TextView
+            style="@style/PenaltyTextViewStyle"
             android:id="@+id/player2Penalty"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/penalty_text_color"
-            android:textSize="12sp"
-            android:gravity="center"
             app:layout_constraintEnd_toStartOf="@+id/player3Penalty"
             app:layout_constraintStart_toEndOf="@+id/player1Penalty"
             app:layout_constraintTop_toBottomOf="@+id/player2Score" />
 
         <EditText
+            style="@style/ScoreTexEditTextStyle"
             android:id="@+id/player3Score"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:hint="@string/input_score_hint"
-            android:background="@null"
-            android:gravity="center"
-            android:inputType="numberSigned"
             app:layout_constraintEnd_toStartOf="@+id/player4Score"
             app:layout_constraintStart_toEndOf="@+id/player2Score"
             app:layout_constraintTop_toTopOf="parent"
-            android:autofillHints="" />
+            android:autofillHints=""
+            tools:ignore="LabelFor" />
 
         <com.google.android.material.divider.MaterialDivider
             android:id="@+id/verticalDivider3"
@@ -119,53 +96,38 @@
             app:layout_constraintBottom_toBottomOf="@+id/player3Score"
             app:layout_constraintStart_toEndOf="@+id/player3Score"
             app:layout_constraintEnd_toStartOf="@id/player4Score"/>
+
         <TextView
+            style="@style/PenaltyTextViewStyle"
             android:id="@+id/player3Penalty"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="@color/penalty_text_color"
-            android:textSize="12sp"
             app:layout_constraintTop_toBottomOf="@+id/player3Score"
             app:layout_constraintStart_toEndOf="@+id/player2Penalty"
             app:layout_constraintEnd_toStartOf="@+id/player4Penalty"/>
 
         <EditText
+            style="@style/ScoreTexEditTextStyle"
             android:id="@+id/player4Score"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:hint="@string/input_score_hint"
-            android:background="@null"
-            android:gravity="center"
             app:layout_constraintStart_toEndOf="@+id/player3Score"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:inputType="numberSigned"
-            android:autofillHints="" />
+            android:autofillHints=""
+            tools:ignore="LabelFor" />
 
         <TextView
+            style="@style/PenaltyTextViewStyle"
             android:id="@+id/player4Penalty"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="@color/penalty_text_color"
-            android:textSize="12sp"
             app:layout_constraintTop_toBottomOf="@+id/player4Score"
             app:layout_constraintStart_toEndOf="@+id/player3Penalty"
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <com.google.android.material.divider.MaterialDivider
             android:id="@+id/horizontalDivider"
-            style="@style/DividerStyle"
             android:layout_marginStart="0dp"
             android:layout_marginEnd="0dp"
             android:layout_width="wrap_content"
             android:layout_height="0.3dp"
-            android:layout_marginTop="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/player4Penalty"/>
-
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
