--- a/app/src/main/res/drawable/round_count.xml
+++ b/app/src/main/res/drawable/round_count.xml
@@ -2,8 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="12dp"
     android:shape="rectangle" >
-    <corners android:topRightRadius="40dp"
-        android:bottomRightRadius="40dp"/>
+    <corners android:topRightRadius="360dp"
+        android:bottomRightRadius="360dp"
+        android:topLeftRadius="360dp"
+        android:bottomLeftRadius="360dp"/>
     <solid  android:color="#4CAF50"/>
     <stroke
         android:width="0.3dp"
