--- a/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
@@ -59,6 +59,7 @@
         <TextView
             android:id="@+id/team1Name"
             style="@style/NameTextViewStyle"
+            android:layout_marginStart="30dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/teamNameDivider1"
             app:layout_constraintTop_toBottomOf="@+id/teamNames" />
@@ -113,6 +114,7 @@
         <TextView
             android:id="@+id/team1TotalScore"
             style="@style/ScoreTextViewStyle"
+            android:layout_marginStart="30dp"
             app:layout_constraintBottom_toTopOf="@+id/detailLabel"
             app:layout_constraintEnd_toStartOf="@id/teamTotalScoreDivider"
             app:layout_constraintStart_toStartOf="parent"
