--- a/app/src/main/res/layout/fragment_save_single_game.xml
+++ b/app/src/main/res/layout/fragment_save_single_game.xml
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:backgroundTint="@color/settings_card_background_color"
+            android:backgroundTint="@color/cardview_background_color"
             app:cardCornerRadius="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -181,6 +181,7 @@
                 android:gravity="center"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:layout_marginTop="4dp"
                 app:layout_constraintStart_toEndOf="@+id/roundCount"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/verticalDivider1" />
@@ -217,6 +218,7 @@
                 android:gravity="center"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:layout_marginTop="4dp"
                 app:layout_constraintStart_toEndOf="@+id/verticalDivider1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/verticalDivider2" />
@@ -252,6 +254,7 @@
                 android:gravity="center"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:layout_marginTop="4dp"
                 app:layout_constraintEnd_toStartOf="@+id/verticalDivider3"
                 app:layout_constraintStart_toEndOf="@+id/verticalDivider2"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -286,6 +289,7 @@
                 android:gravity="center"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:layout_marginTop="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/verticalDivider3"
                 app:layout_constraintTop_toTopOf="parent" />
