Tasarımsal güncellemeler yapıldı

--- a/app/src/main/res/drawable/score_layout.xml
+++ b/app/src/main/res/drawable/score_layout.xml
@@ -6,5 +6,5 @@
         android:bottomRightRadius="20dp"/>
     <stroke
         android:width="0.3dp"
-        android:color="#2B2D30" />
+        android:color="@color/score_layout_border_color" />
 </shape>
