--- a/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
@@ -15,7 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
@@ -49,6 +48,10 @@
         <TextView
             android:id="@+id/teamNames"
             style="@style/HeaderTextViewStyle"
+            android:background="@drawable/header_layout"
+            android:paddingStart="10dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:text="@string/teams"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,148 +59,206 @@
             app:layout_constraintTop_toBottomOf="@+id/toolBar"
             app:drawableLeftCompat="@drawable/ic_partner" />
 
-        <TextView
-            android:id="@+id/team1Name"
-            style="@style/NameTextViewStyle"
-            android:layout_marginStart="30dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/teamNamesAndScoresLayout"
+            android:background="@drawable/score_layout"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/teamNames"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/teamNameDivider1"
-            app:layout_constraintTop_toBottomOf="@+id/teamNames" />
+            app:layout_constraintEnd_toEndOf="parent">
 
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/teamNameDivider1"
-            style="@style/DividerStyle"
-            android:layout_width="0.3dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical"
-            app:layout_constraintStart_toEndOf="@+id/team1Name"
-            app:layout_constraintEnd_toStartOf="@id/team2Name"
-            app:layout_constraintTop_toBottomOf="@id/teamNames"/>
+            <TextView
+                android:id="@+id/team1Name"
+                style="@style/NameTextViewStyle"
+                android:layout_marginStart="30dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/teamNameDivider1"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/team2Name"
-            style="@style/NameTextViewStyle"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/teamNameDivider1"
-            app:layout_constraintTop_toBottomOf="@id/teamNames" />
+            <com.google.android.material.divider.MaterialDivider
+                android:id="@+id/teamNameDivider1"
+                style="@style/DividerStyle"
+                android:layout_width="0.3dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical"
+                app:layout_constraintStart_toEndOf="@+id/team1Name"
+                app:layout_constraintEnd_toStartOf="@id/team2Name"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:id="@+id/team2Name"
+                style="@style/NameTextViewStyle"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/teamNameDivider1"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/roundLabel"
             style="@style/HeaderTextViewStyle"
+            android:background="@drawable/header_layout"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:text="@string/round_scores"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/team1Name"
+            app:layout_constraintTop_toBottomOf="@+id/teamNamesAndScoresLayout"
             app:drawableLeftCompat="@drawable/ic_scoreboard" />
 
-
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/roundRecyclerView"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/roundScoresLayout"
+            android:background="@drawable/score_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/roundLabel" />
-
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/verticalDivider"
-            style="@style/DividerStyle"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp"
-            android:layout_width="wrap_content"
-            android:layout_height="0.3dp"
-            android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@id/roundRecyclerView"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <TextView
-            android:id="@+id/team1TotalScore"
-            style="@style/ScoreTextViewStyle"
-            android:layout_marginStart="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/detailLabel"
-            app:layout_constraintEnd_toStartOf="@id/teamTotalScoreDivider"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/verticalDivider" />
-
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/teamTotalScoreDivider"
-            style="@style/DividerStyle"
-            android:layout_width="0.3dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical"
-            app:layout_constraintStart_toEndOf="@+id/team1TotalScore"
-            app:layout_constraintEnd_toStartOf="@id/team2TotalScore"
-            app:layout_constraintTop_toBottomOf="@id/verticalDivider"/>
-
-        <TextView
-            android:id="@+id/team2TotalScore"
-            style="@style/ScoreTextViewStyle"
-            app:layout_constraintBottom_toTopOf="@+id/detailLabel"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/teamTotalScoreDivider"
-            app:layout_constraintTop_toBottomOf="@+id/verticalDivider" />
+            app:layout_constraintTop_toBottomOf="@id/roundLabel">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/roundRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.divider.MaterialDivider
+                android:id="@+id/verticalDivider"
+                style="@style/DividerStyle"
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="0.3dp"
+                android:layout_marginTop="4dp"
+                app:layout_constraintTop_toBottomOf="@id/roundRecyclerView"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/totalScoreView"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginStart="8dp"
+                android:background="@drawable/round_count"
+                android:gravity="center"
+                android:text="@string/total_score_view_text"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/team1TotalScore"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/team1TotalScore" />
+
+            <TextView
+                android:id="@+id/team1TotalScore"
+                style="@style/ScoreTextViewStyle"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/teamTotalScoreDivider"
+                app:layout_constraintStart_toEndOf="@+id/totalScoreView"
+                app:layout_constraintTop_toBottomOf="@+id/verticalDivider" />
+
+            <com.google.android.material.divider.MaterialDivider
+                android:id="@+id/teamTotalScoreDivider"
+                style="@style/DividerStyle"
+                android:layout_width="0.3dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical"
+                app:layout_constraintStart_toEndOf="@+id/team1TotalScore"
+                app:layout_constraintEnd_toStartOf="@id/team2TotalScore"
+                app:layout_constraintTop_toBottomOf="@id/verticalDivider"/>
+
+            <TextView
+                android:id="@+id/team2TotalScore"
+                style="@style/ScoreTextViewStyle"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/teamTotalScoreDivider"
+                app:layout_constraintTop_toBottomOf="@+id/verticalDivider" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <TextView
             android:id="@+id/detailLabel"
             style="@style/HeaderTextViewStyle"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/header_layout"
             android:text="@string/detail"
             app:drawableLeftCompat="@drawable/ic_info"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/teamTotalScoreDivider" />
-
-        <TextView
-            android:id="@+id/gameDetail"
-            style="@style/InfoTextViewStyle"
-            android:layout_width="0dp"
-            app:layout_constraintEnd_toStartOf="@+id/showScoreDifferencesTextView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detailLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/roundScoresLayout" />
 
 
-        <TextView
-            android:id="@+id/showScoreDifferencesTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="20dp"
-            android:text="@string/show_differences"
-            android:textColor="@color/score_differences_text_color"
-            android:textSize="11sp"
-            app:drawableRightCompat="@drawable/ic_show_detail"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detailLabel" />
-
-        <TextView
-            android:id="@+id/scoreDifferencesTextView"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/detailLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="6dp"
-            android:gravity="center_vertical"
-            android:maxLines="3"
-            android:lineSpacingExtra="4dp"
-            android:textSize="13sp"
-            android:textStyle="normal"
-            android:paddingStart="32dp"
-            android:visibility="gone"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/score_layout"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gameDetail"
-            tools:ignore="RtlSymmetry" />
+            app:layout_constraintTop_toBottomOf="@id/detailLabel">
 
-        <TextView
-            android:id="@+id/gameDate"
-            style="@style/DateTextViewStyle"
-            android:layout_margin="16dp"
+            <TextView
+                android:id="@+id/gameDetail"
+                style="@style/InfoTextViewStyle"
+                android:layout_width="0dp"
+                app:layout_constraintEnd_toStartOf="@+id/showScoreDifferencesTextView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/scoreDifferencesTextView" />
+            <TextView
+                android:id="@+id/showScoreDifferencesTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="16dp"
+                android:text="@string/show_differences"
+                android:textColor="@color/score_differences_text_color"
+                android:textSize="11sp"
+                app:drawableRightCompat="@drawable/ic_show_detail"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/scoreDifferencesTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="16dp"
+                android:gravity="center_vertical"
+                android:lineSpacingExtra="4dp"
+                android:maxLines="3"
+                android:paddingStart="32dp"
+                android:textSize="13sp"
+                android:textStyle="normal"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/gameDetail"
+                tools:ignore="RtlSymmetry" />
 
+            <TextView
+                android:id="@+id/gameDate"
+                style="@style/DateTextViewStyle"
+                android:layout_margin="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/scoreDifferencesTextView" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
