--- a/app/src/main/res/layout/language_dialog.xml
+++ b/app/src/main/res/layout/language_dialog.xml
@@ -2,6 +2,7 @@
 <com.google.android.material.textfield.TextInputLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="8dp"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:startIconDrawable="@drawable/ic_language"
