--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -35,5 +35,7 @@
     <color name="settings_card_background_color">#1E1F22</color>
     <color name="settings_card_divider_color">#F6F6F8</color>
     <color name="penalty_text_color">#FF0000</color>
+    <color name="score_layout_border_color">#2B2D30</color>
+
 </resources>
 
