Tasarımsal güncellemeler yapıldı

--- a/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
@@ -50,6 +50,7 @@
             style="@style/HeaderTextViewStyle"
             android:background="@drawable/header_layout"
             android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:text="@string/teams"
@@ -77,6 +78,20 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/teamNameDivider1"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <View
+                android:id="@+id/team1Indicator"
+                style="@style/GameWinnerIndicatorStyle"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/team1Name"
+                app:layout_constraintStart_toStartOf="@+id/team1Name" />
+
+            <View
+                android:id="@+id/team2Indicator"
+                style="@style/GameWinnerIndicatorStyle"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/team2Name"
+                app:layout_constraintStart_toEndOf="@+id/team1Name" />
 
             <com.google.android.material.divider.MaterialDivider
                 android:id="@+id/teamNameDivider1"
