--- a/app/src/main/res/layout/fragment_save_single_game.xml
+++ b/app/src/main/res/layout/fragment_save_single_game.xml
@@ -345,10 +345,11 @@
             android:text="@string/save"
             android:textAllCaps="false"
             android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/newRound"/>
+            app:layout_constraintTop_toBottomOf="@+id/newRound" />
 
         <Button
             android:id="@+id/newRound"
