--- a/app/src/main/res/layout/fragment_save_partner_game.xml
+++ b/app/src/main/res/layout/fragment_save_partner_game.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="60dp"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".presentation.ui.finishedPartnerGame.FinishedPartnerGameFragment">
 
@@ -243,10 +242,11 @@
             android:text="@string/save"
             android:textAllCaps="false"
             android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/newRound"/>
+            app:layout_constraintTop_toBottomOf="@+id/newRound" />
 
         <Button
             android:id="@+id/newRound"
