--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,10 +9,9 @@
     <color name="button_text_color">#F6F6F8</color>
     <color name="icon_color">#646E72</color>
     <color name="searchview_text_color">#292F33</color>
-    <color name="delete_color">#FF0000</color>
+    <color name="delete_color">#CA4F4F</color>
     <color name="snackbar_background_color">#4CAF50</color>
     <color name="snackbar_text_color">#F6F6F8</color>
-    <color name="toolbar_background_color">#F6F6F8</color>
     <color name="toolbar_text_color">#292F33</color>
     <color name="cardview_background_color">#F6F6F8</color>
     <color name="cardview_shadow_color">#010101</color>
@@ -23,7 +22,6 @@
     <color name="divider_color">#45494A</color>
     <color name="searchview_border_color">#45494A</color>
     <color name="tab_indicator_color">#4CAF50</color>
-    <color name="line_color_dark">#F6F6F8</color>
     <color name="header_text_color">#F6F6F8</color>
     <color name="header_background_color">#45494A</color>
     <color name="score_differences_text_color">#646E72</color>
@@ -35,7 +33,9 @@
     <color name="selected_language_text_color">#666666</color>
     <color name="settings_card_background_color">#F0F0F3</color>
     <color name="settings_card_divider_color">#666666</color>
-    <color name="penalty_text_color">#FF0000</color>
+    <color name="penalty_text_color">#CA4F4F</color>
     <color name="score_layout_border_color">#D7D7D7</color>
+    <color name="game_winner_indicator_color">#4CAF50</color>
+    <color name="default_game_winner_indicator_color">#CA4F4F</color>
 
 </resources>
