--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -76,29 +76,7 @@
         <item name="android:padding">8dp</item>
     </style>
 
-    <style name="NameTextInputLayoutStyle" parent="Widget.AppCompat.EditText" >
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:layout_gravity">center</item>
-        <item name="android:maxLength">4</item>
-    </style>
-
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/settings_card_divider_color</color>
-
-    <style name="ScoreTextInputEditTextStyle" >
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:backgroundTint">@android:color/transparent</item>
-        <item name="android:maxLength">4</item>
-        <item name="android:inputType">numberSigned</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:paddingTop">25dp</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:paddingBottom">-8dp</item>
-    </style>
 
     <style name="ScoreTexEditTextStyle" >
         <item name="android:layout_width">0dp</item>
@@ -168,4 +146,13 @@
         <item name="textAllCaps">false</item>
         <item name="android:textAllCaps">false</item>
     </style>
+
+    <style name="GameWinnerIndicatorStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:background">@color/default_game_winner_indicator_color</item>
+    </style>
+
 </resources>
