--- a/app/src/main/res/layout/fragment_finished_single_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_single_game_detail.xml
@@ -203,13 +203,31 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.material.divider.MaterialDivider
-                android:id="@+id/roundRecyclerViewDivider"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                app:layout_constraintTop_toBottomOf="@id/roundRecyclerView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/totalScoresLabel"
+            style="@style/HeaderTextViewStyle"
+            android:text="@string/total_score_label_text"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/header_layout"
+            app:drawableLeftCompat="@drawable/ic_scoreboard"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/roundScoresLayout" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/totalScoresLayout"
+            android:background="@drawable/score_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/totalScoresLabel">
 
             <TextView
                 android:id="@+id/totalScoreView"
@@ -232,7 +250,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/totalScoreDivider1"
                 app:layout_constraintStart_toEndOf="@+id/totalScoreView"
-                app:layout_constraintTop_toBottomOf="@+id/roundRecyclerViewDivider" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.divider.MaterialDivider
                 android:id="@+id/totalScoreDivider1"
@@ -242,7 +260,7 @@
                 android:layout_gravity="center_vertical"
                 app:layout_constraintStart_toEndOf="@+id/player1TotalScore"
                 app:layout_constraintEnd_toStartOf="@id/player2TotalScore"
-                app:layout_constraintTop_toBottomOf="@id/roundRecyclerViewDivider"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/player2TotalScore"
@@ -251,7 +269,7 @@
                 app:layout_constraintEnd_toStartOf="@id/totalScoreDivider2"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@id/totalScoreDivider1"
-                app:layout_constraintTop_toBottomOf="@+id/roundRecyclerViewDivider" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.divider.MaterialDivider
                 android:id="@+id/totalScoreDivider2"
@@ -261,7 +279,7 @@
                 android:layout_gravity="center_vertical"
                 app:layout_constraintStart_toEndOf="@+id/player2TotalScore"
                 app:layout_constraintEnd_toStartOf="@id/player3TotalScore"
-                app:layout_constraintTop_toBottomOf="@id/roundRecyclerViewDivider"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/player3TotalScore"
@@ -270,7 +288,7 @@
                 app:layout_constraintEnd_toStartOf="@id/totalScoreDivider3"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@id/totalScoreDivider2"
-                app:layout_constraintTop_toBottomOf="@+id/roundRecyclerViewDivider" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.divider.MaterialDivider
                 android:id="@+id/totalScoreDivider3"
@@ -280,7 +298,7 @@
                 android:layout_gravity="center_vertical"
                 app:layout_constraintStart_toEndOf="@+id/player3TotalScore"
                 app:layout_constraintEnd_toStartOf="@id/player4TotalScore"
-                app:layout_constraintTop_toBottomOf="@id/roundRecyclerViewDivider"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/player4TotalScore"
@@ -288,7 +306,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/totalScoreDivider3"
-                app:layout_constraintTop_toBottomOf="@+id/roundRecyclerViewDivider" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -303,7 +321,7 @@
             app:drawableLeftCompat="@drawable/ic_info"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/roundScoresLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/totalScoresLayout" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/detailLayout"
