--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -29,6 +29,7 @@
     <color name="circular_icon_background_color">#4CAF50</color>
     <color name="bottom_navigation_text_color">#F6F6F8</color>
     <color name="bottom_navigation_icon_color">#F6F6F8</color>
+    <color name="bottom_navigation_background_color">#1E1F22</color>
     <color name="selected_language_text_color">#F6F6F8</color>
     <color name="settings_card_background_color">#1E1F22</color>
     <color name="settings_card_divider_color">#F6F6F8</color>
